<resources>
    <string name="app_name">"My Weather Forecast "</string>
    <string name="tab_text_1">Today</string>
    <string name="tab_text_2">Next days</string>
    <string name="tab_text_3">Tomorrow</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="www_wolfmobileapps_com" translatable="false">www.wolfmobileapps..com</string>
    <string name="sunset">Sunset:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="wind">Wind:</string>
    <string name="pressure">Pressure:</string>
    <string name="settings">Settings</string>
    <string name="info" translatable="false">Info</string>
    <string name="about">About</string>
    <string name="version">version</string>
    <string name="description">Description</string>
    <string name="view_description">App description</string>
    <string name="source" translatable="false">source</string>
    <string name="open_source_licenses" translatable="false">open source licenses</string>
    <string name="privacy_policy" translatable="false">privacy policy</string>
    <string name="privacy_policy_info" translatable="false">privacy policy info</string>
    <string name="infoApp" translatable="false">Info</string>
    <string name="application_developer">application developer</string>
    <string name="app_description">"1. Without accepted permissions app will not work!   \n\n2. Without enabled GPS location will not be updated. Forecast weather will be updated on last known position.  "</string>
    <string name="units_metric">Units metric: °C, km/h, 24h</string>
    <string name="units_imperial">Units imperial: °F, mph, 12h</string>
    <string name="place_manual" translatable="false">Place: chose MANUAL</string>
    <string name="place_auto" translatable="false">Place: chose AUTO</string>
    <string name="you_chose" translatable="false">You choose: </string>
    <string name="permissions_not_accepted_view">Without accepted permissions app will not work!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="next_days_temperature">Next Days Temperature</string>
    <string name="error_not_respond">Can not refresh data. Please try again later.</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="refresh_menu">Refresh</string>
    <string name="donations">Donations</string>
    <string name="donation_for_developer">Give a donation of 1$</string>
</resources>